style.css
/* ... */
#aisleSidebar h2, #aisleProducts h2 {
  margin-bottom: 0;
  padding-bottom: 0.3em;
  border-bottom: 2px solid #000;
}

#aisleSidebar nav .active {
  color: #800;
}

#aisleSidebar nav li {
  font-size: 1.125em;
}

#aisleSidebar nav li a:hover {
  color: #800;
}

#aisleProducts {
  margin-top: 1.5em;
}

.flex-productContainer {
  display: flex;
  flex-wrap: wrap;
}

.productContainer {
  border: 2px solid #000;
  background-color: #fff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
  flex: 0 0 215px;
  padding: 1em;
}

.productContainer h3 {
  font-size: 1.5em;
  margin: 0.5em 0;
}

.productContainer img {
  display: block;
  margin: auto;
  width: 100%;
  height: 150px;
}

.productContainer button {
  background-color: #800;
  font-size: 1.2em;
  color: #fff;
  width: 100%;
  padding: 0.3em;
}

@media screen and (max-width: 768px) {
  #aisleSidebar h2, #aisleProducts h2 {
    text-align: center;
  }
  #aisleSidebar nav {
    display: none;
  }
  #aisleSidebar nav ul {
    padding-left: 0px;
    margin-top: 1em;
  }
  #aisleSidebar nav li {
    display: inline-block;
    margin: 0.5em 0;
    padding: 0.5em;
    border-right: 1px solid #000;
  }
  #aisleSidebar:hover nav {
    display: block;
  }
  #aisleProducts {
    padding: 2em 0em;
  }
  .productContainer {
    margin: 2em 0 0 0;
  }
  .flex-productContainer {
    justify-content: center;
  }
}

@media screen and (min-width: 768px) {
  #aisleSidebar {
    float: left;
    width: 20%;
  }
  #aisleSidebar nav ul {
    padding-left: 0px;
    margin-top: 0.5em;
  }
  #aisleSidebar nav li {
    padding: 0.5em 0;
  }
  #aisleProducts {
    float: left;
    width: 80%;
    padding: 1.25em 0em 1.25em 5em;
  }
  .productContainer {
    margin: 2em 2em 0 0;
  }
}

/*End of CSS for P2 */

/*CSS for Product Description (P3)*/

#backButton:hover {
  cursor: pointer;
}

#backButton i {
  float: left;
  font-size: 1.4em;
  color: #800;
}

#backButton p {
  padding-left: 0.75em;
  font-size: 1.1em;
  color: #800;
}

#productDescription {
  overflow: hidden;
  margin: 5em auto;
  width: 70%;
  border: 2px solid #000;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
}

#productDescription img {
  height: 350px;
  padding: 1em;
}

#productDescription #productInfo {
  padding: 1em;
}

#productDescription #btSubmit {
  margin: 1em 0;
  background-color: #800;
  font-size: 1.2em;
  color: #fff;
  width: 100%;
  padding: 0.3em;
}

@media screen and (max-width: 768px) {
  #productDescription {
    margin: 1.25em auto;
  }
  #productDescription img {
    width: 100%;
    display: block;
  }
  #productDescription #productInfo {
    margin: auto;
  }
}

@media screen and (min-width: 768px) {
  #productDescription img {
    width: 50%;
    float: left;
  }
  #productDescription #productInfo {
    width: 50%;
    float: right;
  }
  #backButton p {
    float: left;
  }
}

/*End of CSS for P3*/

/* CSS for Cart P4 */

.WholePage{

	display: grid;
	grid-template-columns: 0.75fr 1fr 1fr;
	grid-template-rows:auto ;
	grid-template-areas:
    "First Second Third  ";
    padding-top: 80px;
    padding-bottom:80px ;
  background-color: white !important;
}

.FirstPart{

	grid-area: First;

}
.title{
	font-size: 80px;
	text-align: center;
	font-weight: 500px;
}

.backtostore {
	display: inline-flex;
	flex-direction: row;
	margin-top: 80px;
	width: 30%;
	align-items: center;
	padding-left: 18px;
}

.link{
	text-decoration: none;
}

.backtostoretext{
	font-size: 18px;
	font-style: unset;
	font-weight: 100;
	color: black;
	text-decoration: none;
}

.SecondPart{
	grid-area: Second;
	display: grid;
	grid-template-columns: 0.3fr 1fr 1fr 1fr;
	grid-template-rows:2 ;
	grid-template-areas:
    "button img name price "
    "button img Quantity price"
   	"button2 img2 name2 price2 "
    "button2 img2 Quantity2 price2"
    "line line line line"
    "empty empty updateButton updateButton";

}
.xbutton{
	grid-area: button;
	height: 25px;
	width: 25px;
	align-self: center !important;
	justify-self: center !important;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: white;
  	color: black;


}
.xbutton:hover{
	grid-area: button;
	height: 25px;
	width: 25px;
	align-self: center !important;
	justify-self: center !important;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: red;
  	color: black;


}


.xbutton:active{
	grid-area: button;
	height: 25px;
	width: 25px;
	align-self: center !important;
	justify-self: center !important;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: darkred;
  	color: white;


}


.Pimage{
	grid-area: img;
	justify-self: center;
	align-self: center;
	width: 100%;
	height: auto;
}

.Pname{
	grid-area: name;
	align-self: center;
	justify-self: center;
}

.Pquantity{
	grid-area: Quantity;
	display: inline-flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-evenly;

}

.PButton {
	grid-area: button;
	height: 30px;
	width: 30px;
	align-self: center;
	justify-self: center;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: white;
  	color: black;
}

.PButton:hover{
	grid-area: button;
	height: 30px;
	width: 30px;
	align-self: center;
	justify-self: center;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: black;
  	color: white;


}


.PButton:active{
	grid-area: button;
	height: 30px;
	width: 30px;
	align-self: center;
	justify-self: center;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: #4f4b4b;
  	color: white;


}


.Mbutton {
	grid-area: button;
	height: 30px;
	width: 30px;
	align-self: center;
	justify-self: center;
	border-radius: 50%;
	border-color: black;
	border-width: 1px;
	background-color: white;
  	color: black;
}
/* ... */

